@@ -91,6 +91,8 @@ derived classes.
 Added wxImage.GetDataBuffer which returns an in-place edit buffer of
 the image data.  (Patch #546009)
 
+Added a sample that shows how to embed wxPython in a wxWindows C++
+application.
 
 
 
